--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar">
                 
                 <div class="logo-container">
-                    <img src="./images/userAsset/NavLogo.jpg" class="logo">
+                    <img src="images/userAsset/NavLogo.jpg" class="logo">
                     <div class="logo-text">ohn Doe</div>
                 </div>
                 
